fix white space issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,20 +340,10 @@ header .skip-link:focus {
 
 /* ====================== Media Queries: 1150px; ====================== */
 @media screen and (min-width: 1150px) {
-  #reviews-container {
-    max-width: 100%;
-  }
   #reviews-list {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-  }
-}
-
-/* ====================== Media Queries: 1400px; ====================== */
-@media screen and (min-width: 1400px) {
-  .filter-options {
-    padding: 10px 30px 0 30px;
   }
 }
